<resources>
    <string name="app_name">MedMe</string>
    <string name="title_activity_med_me_start">MedMeStart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Symptoms">Symptoms</string>
    <string name="Diseases">Diseases</string>
    <string name="Search">Search</string>
    <string name="Diagnose">Diagnose</string>
    <string name="Terminology">Terminology</string>
    <string name="Help">Help</string>
    <string name="Sicknesses">Sicknesses</string>
    <string name="title_activity_med_me_disease">MedMeDisease</string>
    <string name="title_activity_start">Start</string>
    <string name="Settings">Settings</string>
    <string name="chngPass">Change Password</string>
    <string name="deactivate">Deactivate Account</string>
    <string name="view">Viewing</string>
    <string name="diagnosing">Diagnosing</string>
    <string name="searching">Searching</string>

    <string name="startGuest">Guest</string>
    <string name="title_activity_guest_home">Home</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="logIn">Log In</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="email">E-mail:</string>
    <string name="cellNumber">Cellphone Number:</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="recovQues">Recovery Question:</string>
    <string name="recovAns">Recovery Answer:</string>
    <string name="confirmed">Confirm</string>
    <string name="defaultSearch">Please enter what you would like to search in the text box below and click on the Search button.</string>
    <string name="defaultDiagnose">Please select the symptom/s that you are feeling and click on the Diagnose button.</string>
    <string name="defaultDiagnoseConfirm">Please select the Confirm button if these are the symptoms that you selected, otherwise you may go back.</string>

    <string name="title_activity_guest_sickness">Sickness</string>
    <string name="sicknessBeginDesc">1. The state of being ill. \n\n2.A particular type of illness or disease.</string>
    <string name="title_activity_guest_sickness_view">View Sickness</string>
    <string name="title_activity_guest_disease">Disease</string>
    <string name="diseaseBeginDesc">1. A disorder of structure or function in a human, animal, or plant, especially one that produces specific signs
        or symptoms or that affects a specific location and is not simply a direct result of physical injury. \n\n2. A particular quality, habit, or
        disposition regarded as adversely affecting a person or group of people.</string>
    <string name="title_activity_guest_disease_view">View Disease</string>
    <string name="title_activity_guest_symptom">Symptom</string>
    <string name="symptomBeginDesc">1. A physical or mental feature that is regarded as indicating a condition of disease, particularly such a feature
        that is apparent to the patient.</string>
    <string name="title_activity_guest_symptom_view">View Symptom</string>

    <string name="lblDiseaseName">Disease Name:</string>
    <string name="lblDiseaseDesc">Disease Description:</string>
    <string name="lblDiseaseGreekName">Disease Greek Name:</string>
    <string name="lblSymptomName">Symptom Name:</string>
    <string name="lblSymptomDesc">Symptom Description:</string>
    <string name="lblSymptomGreekName">Symptom Greek Name:</string>
    <string name="lblSicknessName">Sickness Name:</string>
    <string name="lblSicknessDesc">Sickness Description:</string>
    <string name="lblSicknessGreekName">Sickness Greek Name:</string>

    <string name="title_activity_admin_home">Admin Home</string>
    <string name="title_activity_admin_diseases_home">Diseases</string>
    <string name="Add">Add</string>
    <string name="Update">Update</string>
    <string name="ViewAll">View All</string>
    <string name="Cancel">Cancel</string>
    <string name="SelectDisease">Select a Disease:</string>
    <string name="SelectSymptom">Select a Symptom:</string>
    <string name="SelectSickness">Select a Sickness:</string>
    <string name="SelectSicknessSymptom">Select a Related Symptom:</string>
    <string name="SelectSicknessDisease">Select a Related Disease:</string>
    <string name="title_activity_admin_diseases_view_all">View All Diseases</string>
    <string name="title_activity_admin_diseases_add">Add Disease</string>
    <string name="title_activity_admin_diseases_update">Update Disease</string>
    <string name="title_activity_admin_symptoms_add">Add Symptom</string>
    <string name="title_activity_admin_symptoms_home">Symptoms</string>
    <string name="title_activity_admin_symptoms_update">Update Symptom</string>
    <string name="title_activity_admin_symptoms_view_all">View All Symptoms</string>
    <string name="title_activity_admin_sicknesses_add">Add Sickness</string>
    <string name="title_activity_admin_sickness_home">Sicknesses</string>
    <string name="title_activity_admin_sicknesses_update">Update Sickness</string>
    <string name="title_activity_admin_sicknesses_view_all">View All Sicknesses</string>
    <string name="title_activity_admin_sicknesses_home">Sicknesses</string>
    <string name="title_activity_admin_sickness_disease_select">Select a Related Disease</string>
    <string name="title_activity_admin_sickness_symptom_select">Select A Symptom</string>
    <string name="title_activity_register_user">Registration</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_admin_disease_view">Disease View</string>
    <string name="title_activity_admin_symptom_view">Symptom View</string>
    <string name="title_activity_admin_sickness_view">View Sickness</string>
    <string name="title_activity_admin_sicknesses_add_symptoms">Add Symptoms to Sickness</string>
    <string name="title_activity_admin_search">Search</string>
    <string name="title_activity_admin_diagnose">Diagnose</string>
    <string name="title_activity_admin_diagnosis_symptoms_confirm">Confirm Symptoms</string>

</resources>
