<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/default_background"
    tools:context="com.example.siyo_pc.medme_trial.GuestHomeFragment$GuestHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/row1"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnDiagnose"
            android:text="@string/Diagnose"/>

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnSearch"
            android:text="@string/Search"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:id="@+id/row2">

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnDiseases"
            android:text="@string/Diseases"
            />

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnSigns"
            android:text="@string/Sign"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:id="@+id/row3">

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnSicknesses"
            android:text="@string/Sicknesses"/>

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnSymptoms"
            android:text="@string/Symptoms"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:id="@+id/row4">

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnTerminology"
            android:text="@string/Terminology"/>

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/grid_button"
            style="@style/button_text"
            android:id="@+id/btnNext"
            android:text="More..."/>
    </LinearLayout>

</LinearLayout>
