<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/default_background"
    tools:context="com.example.siyo_pc.medme_trial.AdminDiseasesUpdateFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/row1"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SelectDisease"
                        style="@style/text_view_text"
                        android:id="@+id/tvAdminUpdateSelectDisease" />

                    <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerUpdateDisease"
                        android:layout_weight="1" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/row2"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDiseaseName"
                        style="@style/text_view_text"
                        android:id="@+id/tvAdminUpdateDiseaseName" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtAdminDiseaseName"
                        android:text=""
                        style="@style/edit_text"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/row3"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:text="@string/lblDiseaseGreekName"
                        style="@style/text_view_text"
                        android:id="@+id/tvAdminUpdateDiseaseGreekName" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:id="@+id/edtAdminDiseaseGreekName"
                        android:textStyle="italic"
                        android:text=""
                        style="@style/edit_text"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/row4"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:text="@string/lblDiseaseDesc"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        style="@style/text_view_text"
                        android:id="@+id/tvAdminUpdateDiseaseDesc" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:id="@+id/edtAdminDiseaseDesc"
                        android:text=""
                        style="@style/edit_text"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/row5"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dip"
                    android:layout_weight="0.1"
                    android:layout_height="match_parent"
                    android:background="@drawable/grid_button"
                    style="@style/button_text"
                    android:id="@+id/btnAdminConfirmCancel"
                    android:text="@string/Cancel"
                    />
                <Button
                    android:layout_width="0dip"
                    android:layout_weight="0.1"
                    android:layout_height="match_parent"
                    android:background="@drawable/grid_button"
                    style="@style/button_text"
                    android:id="@+id/btnAdminConfirmUpdate"
                    android:text="@string/Update"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
